--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
   http: ^0.13.4
   dio: ^4.0.6
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_dropzone: ^3.0.5
+  dotted_border: ^2.0.0
 
 dev_dependencies:
   flutter_test:
